--- a/src/styles.css
+++ b/src/styles.css
@@ -19,3 +19,12 @@ height: 1%;
 *{
     font-family: persian;
 }
+.alert{
+    background-color:#178383 ;
+    color: white;
+    text-align: center;
+    padding: 1em;
+    border-radius: 10px;
+    margin: 0.5em;
+
+}
